Fix the issue where outlines were being cut off

--- a/css/default-ui.css
+++ b/css/default-ui.css
@@ -196,7 +196,6 @@ button:focus {
   justify-content: space-between;
   align-items: stretch;
   position: relative;
-  overflow: hidden;
 }
 @media (min-width: 600px) {
   .row {
