--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -24,7 +24,6 @@
     justify-content: space-between;
     align-items: stretch;
     position: relative;
-    overflow: hidden;
 
     @include portrait {
         flex-direction: row;
